<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/nav_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/bottom_nav_top" />
    <item
        android:id="@id/nav_transaction_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_dataset_24"
        android:title="@string/bottom_nav_transaction" />
    <item
        android:id="@id/nav_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_output_24"
        android:title="@string/bottom_nav_payment" />

    <item
        android:id="@id/nav_receivable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_arrow_back_24"
        android:title="@string/bottom_nav_receivable" />

    <item
        android:id="@id/nav_bankflow_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_account_balance_24"
        android:title="@string/bottom_nav_bankflow_receive" />
</menu>