<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.NewBankflowPayFragment">

    <TableLayout
        android:id="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="40px"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/input_label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/date"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginRight="30dp"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingRight="20px"
                android:text="@string/account_name"
                android:textColor="@color/input_label"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/account_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="30dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/amount"
                android:textColor="@color/input_label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginRight="30dp"
                android:inputType="number" />
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/button_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:text="@string/match"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/button_save"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save" />

    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_result"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/flow_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label1"/>


</androidx.constraintlayout.widget.ConstraintLayout>