<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ResultInputFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TableLayout
            android:id="@+id/tableLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:text="@string/date"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/result_transaction_date"
                    android:layout_width="120dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:text="@string/No"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/result_transaction_sequence"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/sender_name"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/result_sender_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/plate"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/result_plate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/account_name"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/result_account_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/weight"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/result_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_span="5"
                    android:layout_marginBottom="20dp"
                    android:background="?android:attr/listDivider" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textview14"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/total_sales"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/result_total_sales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
                <TextView
                    android:id="@+id/textview13"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/price"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/result_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />


            </TableRow>


        </TableLayout>
        <Button
            android:id="@+id/button_open_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/open_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

        <Button
            android:id="@+id/button_cancel_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/button_save_result"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

        <Button
            android:id="@+id/button_save_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/save" />

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/result_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_cancel_result" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>