<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TransactionDetailsFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:text="@string/date"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_transaction_date"
                    android:layout_width="120dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:text="@string/No"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_transaction_sequence"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/sender_name"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_sender_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/plate"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_plate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/account_name"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_account_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/weight"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textview13"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/price"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textview14"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/total_sales"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_total_sales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>


        </TableLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout1"/>




        <TableLayout
            android:id="@+id/tableLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"

            app:layout_constraintTop_toBottomOf="@+id/tableLayout1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:text="@string/fee"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_fee"
                    android:layout_width="120dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:text="@string/pay_amount"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_pay_amount"
                    android:layout_width="120dp"
                    android:layout_height="match_parent" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:text="@string/pay_date"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_pay_date"
                    android:layout_width="120dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:text="@string/receive_date"
                    android:textColor="@color/input_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_receive_date"
                    android:layout_width="120dp"
                    android:layout_height="match_parent" />
            </TableRow>
        </TableLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout2"/>

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/transaction_photo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintDimensionRatio="3:1"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
            />
        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/result_photo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintDimensionRatio="10:1"
            app:layout_constraintTop_toBottomOf="@+id/transaction_photo"
            />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FF0000"
            android:text="@string/delete"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>