<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.NewBankflowPayFragment">

    <TableLayout
        android:id="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="40px"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/input_label"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/date"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginRight="30dp"
        android:inputType="number" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20px"
            android:text="@string/sender_name"
            android:textColor="@color/input_label"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/sender_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="30dp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textColor="@color/input_label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginRight="30dp"
                android:inputType="number" />
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/button_save_result"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save" />


</androidx.constraintlayout.widget.ConstraintLayout>